# Aid-Assist

./: .firebaserc  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  firebase.json
aid_employ/: .gitignore  README.md  pubspec.yaml
aid_employ/android/: build.gradle
aid_employ/android/app/: build.gradle  google-services.json
aid_employ/android/app/src/main/: AndroidManifest.xml
aid_employ/ios/: firebase_app_id_file.json
aid_employ/ios/Runner/: GoogleService-Info.plist  Info.plist
aid_employ/ios/Runner.xcodeproj/: project.pbxproj
aid_employ/lib/: firebase_options.dart  main.dart  router.dart
aid_employ/lib/core/: type_defs.dart
aid_employ/lib/core/common/: post_card.dart  sign_in_button.dart
aid_employ/lib/core/constants/: constants.dart
aid_employ/lib/core/providers/: storage_repository_provider.dart
aid_employ/lib/features/donate/: donate_map.dart
aid_employ/lib/features/feed/: feed_screen.dart
aid_employ/lib/pages/: auth_page.dart  login_page.dart
aid_employ/lib/theme/: pallete.dart
aid_employ/linux/: CMakeLists.txt  my_application.cc
aid_employ/macos/Flutter/: GeneratedPluginRegistrant.swift
aid_employ/macos/Runner/: GoogleService-Info.plist
aid_employ/macos/Runner.xcodeproj/: project.pbxproj
aid_employ/macos/Runner/Configs/: AppInfo.xcconfig
aid_employ/test/: widget_test.dart
aid_employ/web/: index.html  manifest.json
aid_employ/windows/: CMakeLists.txt
aid_employ/windows/runner/: Runner.rc  main.cpp
chatbot/: README.md  main.py  pyproject.toml  requirements.txt
notebook/: social_drive_content_generation.ipynb
(+26 files in other folders)
